fix display on mobile

--- a/master/css/game.css
+++ b/master/css/game.css
@@ -72,8 +72,13 @@
     z-index: 100; /* Just to keep it at the very top */
 }
 .cover .content {
-    width: 400px;
+    width: 480px;
     margin: 0 auto;
+}
+@media only screen and (max-width : 480px) {
+    .cover .content {
+        width: 100%;
+    }
 }
 .cover .todo {
     color: #798795;
